fix fields fix repos name fix working with null update docs
