# internal/http/handler/user/request/request.go
@@ -7,10 +7,10 @@ type Store struct {
 }
 
 type Update struct {
-	Name        string  `json:"name" validate:"required,min=2,max=255"`
-	Surname     string  `json:"surname" validate:"required,min=2,max=255"`
-	Patronymic  *string `json:"patronymic,omitempty" validate:"omitempty,min=2,max=255"`
-	Sex         *string `json:"sex,omitempty" validate:"omitempty,min=2,max=255"`
-	Nationality *string `json:"nationality,omitempty" validate:"omitempty,min=2,max=255"`
-	Age         *int    `json:"age,omitempty" validate:"omitempty"`
+	Age        *int    `json:"age,omitempty" validate:"omitempty"`
+	Name       string  `json:"name" validate:"required,min=2,max=255"`
+	Surname    string  `json:"surname" validate:"required,min=2,max=255"`
+	Patronymic *string `json:"patronymic,omitempty" validate:"omitempty,min=2,max=255"`
+	Gender     *string `json:"gender,omitempty" validate:"omitempty,min=2,max=255"`
+	CountryId  *string `json:"country_id,omitempty" validate:"omitempty,min=2,max=255"`
 }
